Remove line height to correct spacing after image

--- a/_lib/solid-utilities/_block-grid.scss
+++ b/_lib/solid-utilities/_block-grid.scss
@@ -18,6 +18,7 @@
   display: inline-block      !important;
   font-size: $base-font-size !important;
   vertical-align: top        !important;
+  line-height: 0;
 }
 
 @include generate-breakpoint-prefixes {
